# xlserver

./: README.md
bijoux-xlserver_cpp/: .autotools  .cproject  .gitignore  .project  Makefile.am  build.sh  configure.ac  run-xlserver.sh
bijoux-xlserver_cpp/doc/: README
bijoux-xlserver_cpp/include/: CommonTypes.h  ExcelFunction.h  FunctionCaller.h  FunctionLoader.h  SocketListener.h  XLCall.h  XLCodecCommon.h
bijoux-xlserver_cpp/include/protocol/: XLCodec.h  XLUtil.h  XStream.h
bijoux-xlserver_cpp/include/socketServer/: TcpConnection.h  TcpServer.h
bijoux-xlserver_cpp/src/: FunctionCaller.cpp  FunctionCallerTests.cpp  FunctionLoader.cpp  FunctionLoaderTests.cpp  Makefile.am  MyTestRunner.py  SocketListener.cpp  server_main.cpp
bijoux-xlserver_cpp/src/config/: Log4cxxConfig.xml
bijoux-xlserver_cpp/src/exportedfunctions/: American.cpp  American.h  General.cpp  General.h  TestClass.cpp  TestClass.h
bijoux-xlserver_cpp/src/protocol/: XLCodec.cpp  XLUtil.cpp  XStream.cpp
bijoux-xlserver_cpp/src/socketServer/: TcpConnection.cpp  TcpServer.cpp
bijoux.xlserver/: .project  pom.xml  run-xlserver.sh
bijoux.xlserver/src/main/java/bijoux/xlserver/: BijouxServer.java  FunctionServer.java  HandlerThread.java
bijoux.xlserver/src/main/java/bijoux/xlserver/excel/codec/: BinaryCodec.java  BinaryRequestProtocol.java
bijoux.xlserver/src/main/java/bijoux/xlserver/excel/xloper/: XLArray.java  XLBigData.java  XLBool.java  XLError.java  XLInt.java  XLList.java  XLMap.java  XLMissing.java  XLNil.java  XLNum.java  XLSRef.java  XLString.java  XLoper.java
bijoux.xlserver/src/main/java/bijoux/xlserver/functions/: General.java  MyMath.java
bijoux.xlserver/src/main/java/bijoux/xlserver/server/: FunctionInformation.java  FunctionReferencer.java  XLFunction.java  XLoperObjectConverter.java
bijoux.xlserver/src/test/java/bijoux/bijoux/xlserver/functions/: GeneralTest.java
bijoux.xlserver/src/test/java/bijoux/bijoux/xlserver/server/: FunctionReferencerTest.java  TestClassOfFunctions.java
mock-xlclient/: .classpath  .gitignore  .project  README  pom.xml  run-xlclient.sh
mock-xlclient/src/bijoux/mockxlclient/: BijouxClient.java
mock-xlclient/src/bijoux/mockxlclient/codec/: BinaryCodec.java
mock-xlclient/src/bijoux/mockxlclient/xloper/: XLArray.java  XLBigData.java  XLBool.java  XLError.java  XLInt.java  XLList.java  XLMap.java  XLMissing.java  XLNil.java  XLNum.java  XLSRef.java  XLString.java  XLoper.java
mock-xlclient/src/test/bijoux/mockxlclient/: BijouxClientTest.java
